[package]
name = "ssh-container"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
bollard = "0.11"
futures-util = "0.3"
once_cell = "1.8"
serde = "1.0"
termion = "1.5"
tokio = { version = "1.11", features = ["fs", "rt-multi-thread", "macros"] }
