[package]
name = "ssh-container"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
actix-web = { version = "4.0.0-beta.8", optional = true }
awc = { version = "3.0.0-beta.7", optional = true }
anyhow = "1.0"
bollard = "0.11"
futures-util = "0.3"
once_cell = "1.8"
serde = "1.0"
termion = "1.5"
thiserror = { version = "1.0", optional = true }
tokio = { version = "1.11", features = ["fs", "rt-multi-thread", "macros"] }
toml = { version = "0.5", optional = true }
serde_json = { version = "1.0", optional = true }
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"], optional = true }
log = { version = "0.4", optional = true }
urlencoding = { version = "2.1", optional = true }
bincode = { version = "1.3", optional = true }
uuid = { version = "0.8", features = ["v4"], optional = true }

[features]
default = ["lib", "auth"]
lib = ["thiserror", "toml"]
auth = ["actix-web", "log", "reqwest", "urlencoding", "serde_json"]
server = ["tokio/net", "bincode", "uuid"]

[lib]
name = "internal"
path = "src/lib.rs"
required-features = ["lib"]

[[bin]]
name = "ssh-container"
path = "src/main.rs"

[[bin]]
name = "ssh-containerd"
path = "src/containerd.rs"
required-features = ["server"]
